--- a/DB_Tool.html
+++ b/DB_Tool.html
@@ -26,13 +26,17 @@
     
     <!-- 고정 -->
     <header>
-        <div class="inner">
+        <div class="header_inner">
             <h1>JUAHCHEON</h1>
             <p>JUA Management System</p>
             <div class="profile">
-                <div class="pro_photo"></div>
-                <span>Juah Cheon</span>
-                <p>Administrator</p>
+                <div class="pro_photo">
+                    <img src="img/5bddba7b6574b95d37b6079c199d7101.jpg" alt="프로필 사진">
+                </div>
+                <div class="pro_text">
+                    <span>Juah Cheon</span>
+                    <p>Administrator</p>
+                </div>
             </div>
             <select class="form-select language" aria-label="Default select example">
                 <option selected>언어</option>
@@ -109,6 +113,8 @@
         <section>
             <h3>국가코드 관리</h3>
 
+    <!-- 고정 끝 -->
+    
             <div class="section_search">
                 <div class="search_wrap">
                     <select class="form-select search" aria-label="Default select example">
@@ -249,8 +255,8 @@
                     <i class="bi bi-trash"></i>
                 </div>
                 <div class="makeNew">
-                    <i class="bi bi-file-earmark-excel"></i>
-                    <i class="bi bi-plus"></i>
+                    <button><i class="bi bi-file-earmark-excel"></i></button>
+                    <button type="button"><a href="DB_Tool_02.html"><i class="bi bi-plus"></a></i></button>
                 </div>
                 <div class="modal" tabindex="-1">
                     <div class="modal-dialog">
