--- a/DB_Tool_02.html
+++ b/DB_Tool_02.html
@@ -116,14 +116,14 @@
             <div class="db_wrap">
                 <div class="db_inner">
                     <form class="needs-validation" novalidate>
-                        <ul>
+                        <ul class="need-validation">
                             <li>
                                 <label class="essential form-label" for="name">Seq</label>
                                 <input class="form-control" type="text" disabled placeholder="자동생성">
                             </li>
                             <li>
                                 <label class="essential form-label" for="name">국가 이름</label>
-                                <input class="essential_i form-control" value="" type="text" required>
+                                <input class="form-control" value="" type="text" required>
                             </li>
                             <li class="db_right">
                                 <label class="form-label" for="name">국가 이름 (영문)</label>
@@ -135,15 +135,15 @@
                             </li>
                             <li class="db_right">
                                 <label class="essential form-label" for="name">국가 코드 (3자리)</label>
-                                <input class="essential_i form-control" value="" type="text" placeholder="영대소문자" required>
+                                <input class="form-control" value="" type="text" placeholder="영대소문자" required>
                             </li>
                             <li>
                                 <label class="essential form-label" for="name">국가 코드 (2자리)</label>
-                                <input class="essential_i form-control" value="" type="text" placeholder="영대소문자" required>
+                                <input class="form-control" value="" type="text" placeholder="영대소문자" required>
                             </li>
                             <li class="db_right">
                                 <label class="essential form-label" for="name">순서</label>
-                                <input class="essential_i form-control" value="" type="number" placeholder="숫자(0~255)" required>
+                                <input class="form-control" value="" type="number" placeholder="숫자(0~255)" required>
                             </li>
                             <li>
                                 <label class="essential form-label" for="name">사용여부</label>
