--- a/DB_Tool.html
+++ b/DB_Tool.html
@@ -154,7 +154,7 @@
             </div>
 
             <div class="section_wrap">
-                <p class="total">Total: 3</p>
+                <p class="total">Total: </p>
                 <select class="form-select" aria-label="Default select example">
                     <option selected>10</option>
                     <option value="1">20</option>
@@ -167,7 +167,7 @@
                 <thead>
                     <tr>
                         <th scope="col">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <input class="form-check-input checkAll" type="checkbox" value="" id="flexCheckDefault">
                         </th>
                         <th scope="col" class="order">#</th>
                         <th scope="col" class="order_2">Seq</th>
@@ -232,7 +232,9 @@
             <div class="page">
                 <nav aria-label="...">
                     <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">1</a>
+                        </li>
                         <li class="page-item" aria-current="page">
                             <a class="page-link" href="#">2</a>
                         </li>
